<resources>
    <!-- app -->
    <string name="app_name">Clean Architecture</string>
    <string name="main_package">disono.com.webmons</string>

    <!-- dialog -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message">Ooops something went wrong!</string>
    <string name="dialog_progress_message">Please wait while loading&#8230;</string>
    <string name="dialog_button_ok">OK</string>

    <!-- default messages -->
    <string name="no_internet">No internet connection!</string>

    <!-- call -->
    <string name="lbl_call_identity">Retreiving Identity…</string>
    <string name="btn_txt_call_ready">Ready</string>
    <string name="btn_txt_call_end">End Call</string>

    <!-- communication -->
    <string name="contact_address">Person to contact</string>
    <string name="talk">Talk</string>

    <!-- labels -->
    <string name="lbl_email">Email</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_last_username">Username</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_about">About</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_current_password">Current Password</string>
    <string name="lbl_new_password">New Password</string>

    <!-- buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">Update</string>
    <string name="btn_save">Save Changes</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_date">Pick a date</string>
    <string name="btn_time">Pick a time</string>

    <!-- links -->
    <string name="lnk_no_account">No account yet? Create one</string>
    <string name="lnk_forgot_password">Forgot Password?</string>

    <!-- validation messages -->
    <string name="error_message_empty">This field is required.</string>
    <string name="error_message_digit">This field must a number.</string>
    <string name="error_message_regex">This field has invalid type or value.</string>
    <string name="error_message_email">This field must be a valid email.</string>

    <!-- txt -->
    <string name="txt_settings">Settings</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_social">Social</string>
    <string name="txt_forgot">Forgot Password</string>

    <!-- spinners -->
    <string-array name="spinner_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- regex -->
    <string name="regex_email">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
</resources>
