<com.emmasuzuki.easyform.EasyForm xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_general_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:submitButton="@+id/btn_security_save"
    tools:context="disono.webmons.com.clean_architecture.presentation.ui.fragments.settings.SecuritySettingsFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:paddingTop="16dp">

            <!-- email -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_security_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                app:regexPattern="@string/regex_email"
                app:errorMessage="@string/error_message_email"
                app:errorType="empty" />

            <!-- current password -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_security_current_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lbl_current_password"
                android:inputType="textPassword"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty" />

            <!-- new password -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_security_new_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lbl_new_password"
                android:inputType="textPassword" />

            <!-- submit -->
            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_security_save"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@color/wb_danger"
                    android:padding="12dp"
                    android:text="@string/btn_save" />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>
</com.emmasuzuki.easyform.EasyForm>
