<?xml version="1.0" encoding="utf-8"?>
<com.emmasuzuki.easyform.EasyForm xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_general_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:submitButton="@+id/btn_register_submit"
    tools:context=".presentation.ui.activities.authenticate.RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- first name -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_register_first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_first_name"
                    android:inputType="text"
                    app:errorMessage="@string/error_message_empty"
                    app:errorType="empty" />

                <!-- last name -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_register_last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_last_name"
                    android:inputType="text"
                    app:errorMessage="@string/error_message_empty"
                    app:errorType="empty" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top">

                <!-- email -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_register_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_email"
                    android:inputType="textEmailAddress"
                    app:errorMessage="@string/error_message_email"
                    app:errorType="empty"
                    app:regexPattern="@string/regex_email" />

                <!-- username -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_register_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_last_username"
                    android:inputType="text"
                    app:errorMessage="@string/error_message_empty"
                    app:errorType="empty" />
            </LinearLayout>

            <!-- password -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                android:layout_marginTop="@dimen/margin_top" />

            <!-- phone -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_phone"
                android:inputType="number"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                android:layout_marginTop="@dimen/margin_top" />

            <!-- address -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_address"
                android:inputType="text|textMultiLine"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                android:layout_marginTop="@dimen/margin_top" />

            <!-- submit -->
            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_register_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:padding="12dp"
                    android:text="@string/btn_register" />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>
</com.emmasuzuki.easyform.EasyForm>
