<?xml version="1.0" encoding="utf-8"?>
<com.emmasuzuki.easyform.EasyForm
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    app:submitButton="@+id/btn_login"
    tools:context=".presentation.ui.activities.authenticate.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@mipmap/ic_app_logo" />

            <!-- email Label -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                app:errorMessage="@string/error_message_email"
                app:regexPattern="^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$"
                app:errorType="empty" />

            <!-- password Label -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                app:minChars="4" />

            <!-- button login -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/btn_login" />

            <!-- link to register -->
            <TextView
                android:id="@+id/text_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/lnk_no_account"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</com.emmasuzuki.easyform.EasyForm>