<?xml version="1.0" encoding="utf-8"?>
<com.emmasuzuki.easyform.EasyForm xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    app:submitButton="@+id/btn_forgot_submit"
    tools:context=".presentation.ui.activities.authenticate.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <!-- email Label -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                app:regexPattern="@string/regex_email"
                app:errorMessage="@string/error_message_email"
                app:errorType="empty" />

            <!-- button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_forgot_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/btn_submit" />
        </LinearLayout>
    </ScrollView>
</com.emmasuzuki.easyform.EasyForm>
