<com.emmasuzuki.easyform.EasyForm xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_general_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:submitButton="@+id/btn_general_update"
    tools:context="disono.webmons.com.clean_architecture.presentation.ui.fragments.settings.GeneralSettingsFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_avatar"
                android:layout_width="142dp"
                android:layout_height="142dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_no_avatar" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top">

                <!-- first name -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_first_name"
                    android:inputType="text"
                    app:errorMessage="@string/error_message_empty"
                    app:errorType="empty" />

                <!-- last name -->
                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/edit_txt_last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lbl_last_name"
                    android:inputType="text"
                    app:errorMessage="@string/error_message_empty"
                    app:errorType="empty" />
            </LinearLayout>

            <!-- phone -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_phone"
                android:inputType="number"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                android:layout_marginTop="@dimen/margin_top" />

            <!-- gender -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_gender"
                style="@style/InputLabel"
                android:layout_marginTop="@dimen/margin_top" />

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_gender" />

            <!-- birthday -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputLabel">

                <EditText
                    android:id="@+id/edit_txt_general_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_birthday"
                    android:layout_marginTop="@dimen/margin_top" />
            </android.support.design.widget.TextInputLayout>

            <!-- address -->
            <com.emmasuzuki.easyform.EasyTextInputLayout
                android:id="@+id/edit_txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_address"
                android:inputType="text|textMultiLine"
                app:errorMessage="@string/error_message_empty"
                app:errorType="empty"
                android:layout_marginTop="@dimen/margin_top" />

            <!-- update -->
            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_general_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/btn_save" />
            </com.andexert.library.RippleView>

            <!-- logout -->
            <com.andexert.library.RippleView
                rv_centered="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_general_logout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@color/wb_danger"
                    android:text="@string/btn_logout" />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>
</com.emmasuzuki.easyform.EasyForm>
