<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="disono.webmons.com.clean_architecture.presentation.ui.activities.communication.voice.WalkieTalkieActivity">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_calling_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_no_avatar" />

        <TextView
            android:id="@+id/txt_view_calling_identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/lbl_call_identity"
            android:layout_centerVertical="true"
            android:layout_below="@+id/image_view_calling_avatar" />

        <Button
            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/wb_primary"
            android:padding="15dp"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/btn_txt_call_ready"
            android:layout_below="@+id/txt_view_calling_identity" />

        <Button
            android:id="@+id/btn_end_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/wb_danger"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:text="@string/btn_txt_call_end"
            android:layout_below="@+id/btn_call"
            android:visibility="invisible" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
